--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "prop-types": "^15.7.2",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
+        "react-lazyload": "^2.6.7",
         "react-pure-render": "^1.0.2",
         "react-redux": "^7.2.0",
         "react-router-dom": "^5.1.2",
