--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "webpack-dev-server --open --progress --colors --config ./webpack.dev.js"
+        "start": "webpack-dev-server --open --progress --colors --config ./webpack.dev.js",
+        "test": "jest"
     },
     "author": "Tom Beaufoy",
     "license": "ISC",
@@ -31,9 +32,12 @@
         "@babel/preset-env": "^7.9.5",
         "@babel/preset-react": "^7.9.4",
         "babel-eslint": "^10.1.0",
+        "babel-jest": "^25.3.0",
         "babel-loader": "^8.1.0",
         "babel-polyfill": "^6.26.0",
         "css-loader": "^3.5.2",
+        "enzyme": "^3.11.0",
+        "enzyme-adapter-react-16": "^1.15.2",
         "eslint": "^6.8.0",
         "eslint-config-airbnb": "^18.1.0",
         "eslint-loader": "^4.0.0",
@@ -42,6 +46,7 @@
         "eslint-plugin-react": "^7.19.0",
         "file-loader": "^6.0.0",
         "html-webpack-plugin": "^4.2.0",
+        "jest": "^25.3.0",
         "node-sass": "^4.13.1",
         "sass-loader": "^8.0.2",
         "style-loader": "^1.1.3",
